fix: prevent layout shift when modal opens by setting header position

--- a/src/widgets/Header/AppHeader.module.scss
+++ b/src/widgets/Header/AppHeader.module.scss
@@ -1,3 +1,10 @@
+.header{
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+}
+
 .headerControls {
   display: flex;
   justify-content: space-between;
